# ebpf-verifier

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  FindGMP.cmake  LICENSE-APACHE  LICENSE-Apache-2.0.txt  Makefile  README.md  bpf.v  collapse_crab.py  completion.sh  crab_constraints.cpp  crab_deps.txt  disassembler.py  disassembler_tests.py  eBPF.md  experiment.sh  load_bpf  myinstall.sh  prototypes_all.c  requirements.txt  results.csv  sdbm_interface.cpp  test-schema.yaml
.github/: codecov.yml  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  validate-yaml.yml
asm/: asm_parser.py  assembler.py  disassembler.py
assembler/: assembler.py  assembler_tests.py  parser.py
counter/: .gitignore  Makefile  extract_sections.sh  linux.patch  load_bpf  load_bpf.c
counter/bugs/: bug_r11.c  bug_segfault.c  cpustat_kern.c
counter/failures/: memcpy_maps_fails_verification.asm  memcpy_maps_fails_verification.bc  memcpy_maps_fails_verification.c  memcpy_maps_fails_verification.ll  simple_checksum_neq_fails_verification.asm  simple_checksum_neq_fails_verification.bc  simple_checksum_neq_fails_verification.c  simple_gt_linux_fail.asm  simple_gt_linux_fail.bc  simple_gt_linux_fail.c  simple_gt_linux_fail.ll
counter/include/: bpf_helpers.h
counter/kern/: cpustat_kern.asm  cpustat_kern.c  manual_memcpy.asm  (+173 more)
disassembler/: disassembler.py  disassembler_tests.py
extract_functions/: prototypes_all.c
more_samples/: Makefile  compile.sh  elazar_kern.c  elazar_user.c  load_bpf.c  tmp.c
ovs-objs/: action.h  api.h  datapath.h  generated_headers.h  helpers.h  lookup.h  maps.h  odp-bpf.h  openvswitch.h  ovs-p4.h  parser.h  xdp.h
scripts/: .check-license.ignore  README.md  check-license.sh  commit-msg  experiment.sh  format-code  format-code.ps1  hist.py  makeplot.py  pre-commit  runmem.sh  runperf.sh  save_outputs.py  uniq_hash.py
selftests/: accept_DIV32_by_0_zero_check_ok_cls.3  accept_DIV32_overflow_check_2.3  accept_DIV64_by_0_zero_check_cls.3  accept_DIV64_overflow_check_1.3  accept_DIV64_overflow_check_2.3  accept_MOD32_by_0_zero_check_1_cls.3  accept_MOD32_by_0_zero_check_2_cls.3  accept_MOD32_overflow_check_2.3  accept_MOD64_by_0_zero_check.1  accept_MOD64_by_0_zero_check_1_cls.3  accept_XDP_pkt_read_pktdata__pktmeta_good_access.6  accept_XDP_pkt_read_pktend__pktdata_good_access.6  accept_XDP_pkt_read_pktmeta__pktdata_good_access.6  accept_XDP_using_ifindex_from_netdev.6  accept_access_skb_fields_ok.1  accept_bounds_check_after_truncation_of_nonboundarycrossing_range.1  accept_bounds_check_after_wrapping_32bit_addition.1  accept_bounds_checks_mixing_signed_and_unsigned_variant_7.1  accept_bpfexit_with_invalid_return_code_test4.9  accept_check_bpfperfeventdatasampleperiod_byte_load_permitted.7  accept_check_bpfperfeventdatasampleperiod_half_load_permitted.7  accept_check_cb_access_double.1  accept_check_cb_access_word.1  accept_check_deducing_bounds_from_const_2.1  accept_check_deducing_bounds_from_const_4.1  accept_check_skbtcindex_is_writeable_by_SKSKB.14  accept_check_valid_spillfill.1  accept_cond_two_branches_returning_same_map_pointers_for_lookup_tail_tail.1  accept_constant_register__constant_register_should_keep_constant_type.5  accept_direct_packet_access_test18_imm__pktptr_1.3  accept_direct_packet_access_test2.3  accept_direct_packet_access_test21_x__pktptr_2.3  accept_direct_packet_access_test27_marking_on__good_access.3  accept_direct_packet_access_test9_double_test_variant_2.3  accept_direct_packet_read_for_SKMSG.16  accept_jit_various_mul_tests.1  accept_jump_test_2.1  accept_jump_test_4.1  accept_ldabs_check_calling_conv_r7.1  accept_ldabs_div__abs_test_1.3  (+124 more)
src/: Makefile  ai.cpp  ai.hpp  ai_dom_mem.cpp  ai_dom_mem.hpp  ai_dom_rcp.cpp  ai_dom_rcp.hpp  ai_dom_set.cpp  ai_dom_set.hpp  asm.hpp  asm_cfg.cpp  asm_cfg.hpp  asm_dis.cpp  asm_files.cpp  asm_files.hpp  asm_marshal.cpp  asm_marshal.hpp  asm_ostream.cpp  asm_ostream.hpp  asm_parse.cpp  asm_parse.hpp  asm_syntax.hpp  asm_unmarshal.cpp  asm_unmarshal.hpp  assemble.cpp  assertions.cpp  assertions.hpp  btf.h  btf_parser.cpp  btf_parser.h  cfg.cpp  cfg.hpp  common.hpp  config.cpp  config.hpp  constraints.cpp  constraints.hpp  crab_cfg.cpp  crab_cfg.hpp  crab_common.hpp  (+48 more)
test-data/: add.yaml  assign.yaml  atomic.yaml  bitop.yaml  call.yaml  calllocal.yaml  callx.yaml  divmod.yaml  full64.yaml  jump.yaml  load.yaml  loop.yaml  map.yaml  movsx.yaml  muldiv.yaml  packet.yaml  parse.yaml  pointer.yaml  sdivmod.yaml  sext.yaml  shift.yaml  single-instruction-assignment.yaml  single-instruction-binop.yaml  single-instruction-unop.yaml  spectre.yaml  stack.yaml  subtract.yaml  udivmod.yaml  uninit.yaml  unop.yaml  unsigned.yaml
test_framework/: expand-testcase.py  test_assembler.py  test_disassembler.py  test_elf.py  test_jit.py  test_vm.py  testdata.py
tests/: alu.data  alu64.data  call-memfrob.data  call.data  err-call-bad-imm.data  err-div-by-zero-imm.data  err-div-by-zero-reg.data  err-div64-by-zero-reg.data  err-endian-size.data  err-invalid-reg-src.data  err-jmp-lddw.data  err-jmp-out.data  err-mod-by-zero-reg.data  err-mod64-by-zero-reg.data  err-noexit.data  err-stack-oob.data  err-too-many-instructions.data  expand-testcase.py  subnet.data  test_assembler.py  test_disassembler.py  test_jit.py  test_roundtrip.py  test_vm.py  testdata.py
ubpf/: asm_parser.py  assembler.py  disassembler.py
vm/: .gitignore  Makefile  abs_cfg.cpp  abs_cfg.hpp  abs_common.hpp  abs_constraints.cpp  abs_constraints.hpp  abs_cst_regs.cpp  abs_cst_regs.hpp  abs_dom.h  abs_dom_const.c  abs_dom_interval.c  abs_interp.c  abs_interp.cpp  abs_interp.h  abs_state.h  abs_state_regs.c  absdom_const.c  cfg.cpp  cfg.hpp  common.hpp  completion.sh  constraints.cpp  constraints.hpp  crab_domains.cpp  ebpf.h  extract_sections.sh  instructions.hpp  multiblock.hpp  prototypes.c  prototypes.cpp  prototypes.h  prototypes.hpp  run.sh  runmem.sh  runperf.sh  runtests.sh  test.c  test.cpp  type_descriptors.hpp  (+12 more)
(+1142 files in other folders)
